# ampkg

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/install/: install.rs  mod.rs
src/utils/: fetch.rs  macros.rs  mod.rs  paths.rs  verify.rs
src/utils/amp/: mod.rs  unpack.rs
src/utils/pkgdb/: mod.rs  read_db.rs  structs.rs
src/utils/toml/: control.rs  mod.rs  parse.rs
