[package]
name = "ampkg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
futures-util = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
zstd = "0.13.3"
